modifications demandées et faites sur plusieurs fichiers voir JournalDeTravail.md