@@ -1,6 +1,7 @@
 package com.emi.GestionnaireFormation.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -15,7 +16,7 @@ import com.emi.GestionnaireFormation.repository.UtilisateurRepository;
 
 /**
  * Contrôleur REST qui gère les routes pour les rôles.
- * Permet de récupérer la liste des rôles et le rôle d'un utilisateur.
+ * Permet de récupérer la liste des rôles et les rôles d'un utilisateur.
  *
  * @author CDA Afpa Emi
  */
@@ -26,12 +27,6 @@ public class RoleController {
     private final RoleRepository roleRepository;
     private final UtilisateurRepository utilisateurRepository;
 
-    /**
-     * Constructeur pour l'injection des repositories.
-     *
-     * @param roleRepository repository pour l'entité Role
-     * @param utilisateurRepository repository pour l'entité Utilisateur
-     */
     public RoleController(RoleRepository roleRepository, UtilisateurRepository utilisateurRepository) {
         this.roleRepository = roleRepository;
         this.utilisateurRepository = utilisateurRepository;
@@ -39,34 +34,30 @@ public class RoleController {
 
     /**
      * Récupère la liste de tous les libellés des rôles.
-     *
      * @return une liste de RoleDto (libellés des rôles)
-     * @see RoleDto
      */
     @GetMapping("/")
     public List<RoleDto> getAllRolesLibelle() {
         List<Role> roles = roleRepository.findAll();
-        // On transforme chaque Role en RoleDto (on ne garde que le libelle)
         return roles.stream()
                 .map(role -> new RoleDto(role.getLibelle()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
-     * Récupère le libellé du rôle d'un utilisateur à partir de son matricule.
-     *
+     * Récupère les libellés des rôles d'un utilisateur à partir de son matricule.
      * @param matricule le matricule de l'utilisateur
-     * @return une liste contenant le RoleDto correspondant, ou une liste vide si non trouvé
-     * @see RoleDto
+     * @return une liste de RoleDto correspondant, ou une liste vide si non trouvé
      */
     @GetMapping("/utilisateur/{matricule}")
     public List<RoleDto> getRoleLibelleByUtilisateur(@PathVariable String matricule) {
         Utilisateur utilisateur = utilisateurRepository.findByMatricule(matricule);
-        if (utilisateur != null && utilisateur.getRole() != null) {
-            // On retourne le libelle du rôle de l'utilisateur dans une liste
-            return List.of(new RoleDto(utilisateur.getRole().getLibelle()));
+        if (utilisateur != null && utilisateur.getRoles() != null) {
+            // MODIF: gestion des rôles multiples
+            return utilisateur.getRoles().stream()
+                    .map(role -> new RoleDto(role.getLibelle()))
+                    .collect(Collectors.toList());
         } else {
-            // Si l'utilisateur ou son rôle n'existe pas, on retourne une liste vide
             return List.of();
         }
     }
